--- a/releaseApp.json
+++ b/releaseApp.json
@@ -1,7 +1,8 @@
 {
     "ProductId": "iFlag.Extension.Default",
     "Type": "Software",
-    "Releases": 
+    "StableVersion": "2.0.0.0",
+    "Releases":
     [
         {
             "Date": "2021-08-24T00:00:00.000-07:00",
