fix id in app info

--- a/releaseApp.json
+++ b/releaseApp.json
@@ -1,5 +1,5 @@
 {
-    "ProductId": "iFlag.Extension.Default",
+    "ProductId": "iFlag.Application",
     "Type": "Software",
     "StableVersion": "2.0.0.0",
     "Releases":
