--- a/releaseApp.json
+++ b/releaseApp.json
@@ -10,7 +10,26 @@
             "Hash": "1234567890",
             "Url": "",
             "Type": "Stable",
-            "Description": "First!!!"
+            "Summary": "First!!!",
+            "Details":
+            [
+                {
+                    "Header": "Features"
+                    "Items":
+                    [
+                        "This!",
+                        "That!",
+                        "The other thing!"
+                    ]
+                },
+                {
+                    "Header": "Bug fixes"
+                    "Items":
+                    [
+                        "No longer causes supernova immediately upon launch",
+                    ]
+                }               
+            ]
         }
     ]
 }
