--- a/releaseSampleExtension.json
+++ b/releaseSampleExtension.json
@@ -14,7 +14,7 @@
             "Details":
             [
                 {
-                    "Header": "Features"
+                    "Header": "Features",
                     "Items":
                     [
                         "Samples!",
