--- a/releaseApp.json
+++ b/releaseApp.json
@@ -23,10 +23,10 @@
                     ]
                 },
                 {
-                    "Header": "Bug fixes"
+                    "Header": "Bug fixes",
                     "Items":
                     [
-                        "No longer causes supernova immediately upon launch",
+                        "No longer causes supernova immediately upon launch"
                     ]
                 }               
             ]
