add hash to default device

--- a/releaseApp.json
+++ b/releaseApp.json
@@ -8,7 +8,7 @@
         "Date": "2021-08-24T00:00:00.000-07:00",
         "Type": "Stable",
         "Version": "2.0.0.0",
-        "PackageUrl": "",
+        "PackageUrl": "https://raw.githubusercontent.com/daremzsrc/versionCheck/master/iFlag.Application.2.0.0.0.zip",
         "PackageHash": "1234567890",
         "Summary": "First!!!",
         "Details":
